# eco_router

./: README.md
backend/yhacktemp/autoresearch-yaledgx/: .gitignore  README.md  REPORT.md  WEBSITE_PROMPT.md  analyze_all.py  analyze_runs.py  merge_runs.py  parallel_runner.py  parallel_runner_v7.py  predict_sci.py  program.md  pyproject.toml  run_10min.sh  run_10min_30s_iter.sh  run_10min_pip.sh  run_10min_v2.sh  run_10min_v3.sh  run_10min_v4.sh  run_10min_v5.sh  run_15iter.sh  run_30s_v5.sh  run_30s_v6.sh  run_30s_v7.sh  run_5min_v5.sh  sensor_logger_v3.sh  sensor_logger_v4.sh  sensor_timeseries.json
backend/yhacktemp/autoresearch-yaledgx/config/: default.yaml
backend/yhacktemp/autoresearch-yaledgx/config/search_spaces/: qwen3_5.yaml
backend/yhacktemp/autoresearch-yaledgx/runs/combined/: combined_results.csv  combined_results.json  frontier_predictions.json
backend/yhacktemp/autoresearch-yaledgx/runs/run_15iter_direct_20260328_141012/: results.db
backend/yhacktemp/autoresearch-yaledgx/runs/run_20260328_112556/: run_config.json
backend/yhacktemp/autoresearch-yaledgx/runs/run_20260328_112602/: run_config.json
backend/yhacktemp/autoresearch-yaledgx/runs/run_20260328_112603/: run_config.json
backend/yhacktemp/autoresearch-yaledgx/runs/run_20260328_112945/: results.db  run_config.json  sensor_log.csv
backend/yhacktemp/autoresearch-yaledgx/runs/run_20260328_114055/: run_config.json  (+1 more)
backend/yhacktemp/autoresearch-yaledgx/tests/: test_carbon.py  test_evaluator.py  test_models.py  test_pareto.py  test_power.py  test_store.py  test_strategy.py  test_system.py
(+328 files in other folders)
